rectangle repaid and work correctly

--- a/resources.qrc
+++ b/resources.qrc
@@ -3,5 +3,6 @@
         <file>../../Pictures/cq5dam.thumbnail.800.800.png</file>
         <file>../../Pictures/Paint-Brush.png</file>
         <file>../../Pictures/rectangle.png</file>
+        <file>../../Pictures/Delete.png</file>
     </qresource>
 </RCC>
