--- a/paint.ui
+++ b/paint.ui
@@ -34,7 +34,6 @@
      <string>Paint Mode</string>
     </property>
     <addaction name="actionPen"/>
-    <addaction name="actionSwitchOFF"/>
     <addaction name="separator"/>
     <addaction name="separator"/>
    </widget>
@@ -60,8 +59,13 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionPen"/>
+   <addaction name="separator"/>
    <addaction name="actionRectangle"/>
+   <addaction name="separator"/>
+   <addaction name="actionSwitchOFF"/>
+   <addaction name="separator"/>
    <addaction name="actionColour"/>
+   <addaction name="separator"/>
   </widget>
   <action name="actionPen">
    <property name="icon">
@@ -73,6 +77,10 @@
    </property>
   </action>
   <action name="actionSwitchOFF">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/Pictures/Delete.png</normaloff>:/Pictures/Delete.png</iconset>
+   </property>
    <property name="text">
     <string>SwitchOFF</string>
    </property>
