--- a/paint.ui
+++ b/paint.ui
@@ -29,14 +29,6 @@
      <height>22</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuPaint_Mode">
-    <property name="title">
-     <string>Paint Mode</string>
-    </property>
-    <addaction name="actionPen"/>
-    <addaction name="separator"/>
-    <addaction name="separator"/>
-   </widget>
    <widget class="QMenu" name="menuFile">
     <property name="title">
      <string>File</string>
@@ -45,7 +37,6 @@
     <addaction name="actionSave_as"/>
    </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuPaint_Mode"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <widget class="QToolBar" name="toolBar">
@@ -61,6 +52,8 @@
    <addaction name="actionPen"/>
    <addaction name="separator"/>
    <addaction name="actionRectangle"/>
+   <addaction name="separator"/>
+   <addaction name="actionEllipse"/>
    <addaction name="separator"/>
    <addaction name="actionSwitchOFF"/>
    <addaction name="separator"/>
@@ -114,6 +107,15 @@
    </property>
    <property name="text">
     <string>Rectangle</string>
+   </property>
+  </action>
+  <action name="actionEllipse">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/resourses/oval.png</normaloff>:/resourses/oval.png</iconset>
+   </property>
+   <property name="text">
+    <string>Ellipse</string>
    </property>
   </action>
  </widget>
