--- a/paint.ui
+++ b/paint.ui
@@ -53,6 +53,8 @@
    <addaction name="separator"/>
    <addaction name="actionRectangle"/>
    <addaction name="separator"/>
+   <addaction name="actionLine"/>
+   <addaction name="separator"/>
    <addaction name="actionEllipse"/>
    <addaction name="separator"/>
    <addaction name="actionSwitchOFF"/>
@@ -116,6 +118,15 @@
    </property>
    <property name="text">
     <string>Ellipse</string>
+   </property>
+  </action>
+  <action name="actionLine">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/resourses/line.png</normaloff>:/resourses/line.png</iconset>
+   </property>
+   <property name="text">
+    <string>Line</string>
    </property>
   </action>
  </widget>
