--- a/resources.qrc
+++ b/resources.qrc
@@ -5,5 +5,6 @@
         <file>resourses/Paint-Brush.png</file>
         <file>resourses/rectangle.png</file>
         <file>resourses/oval.png</file>
+        <file>resourses/line.png</file>
     </qresource>
 </RCC>
