--- a/paint.ui
+++ b/paint.ui
@@ -57,6 +57,10 @@
    <addaction name="separator"/>
    <addaction name="actionEllipse"/>
    <addaction name="separator"/>
+   <addaction name="actionEraser"/>
+   <addaction name="separator"/>
+   <addaction name="actionClear_All"/>
+   <addaction name="separator"/>
    <addaction name="actionSwitchOFF"/>
    <addaction name="separator"/>
    <addaction name="actionColour"/>
@@ -127,6 +131,24 @@
    </property>
    <property name="text">
     <string>Line</string>
+   </property>
+  </action>
+  <action name="actionClear_All">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/resourses/clear.png</normaloff>:/resourses/clear.png</iconset>
+   </property>
+   <property name="text">
+    <string>Clear All</string>
+   </property>
+  </action>
+  <action name="actionEraser">
+   <property name="icon">
+    <iconset resource="resources.qrc">
+     <normaloff>:/resourses/eraser.ico</normaloff>:/resourses/eraser.ico</iconset>
+   </property>
+   <property name="text">
+    <string>Eraser</string>
    </property>
   </action>
  </widget>
